--- a/wa-state-agencies/README.Rmd
+++ b/wa-state-agencies/README.Rmd
@@ -1,11 +1,25 @@
 ---
 output: github_document
+always_allow_html: yes
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+
+library(kableExtra)
+library(knitr)
+library(tidyverse)
+
+options(knitr.kable.NA = '')
 ```
 
 ## Washington State Agencies
 
 A list of the agencies in Washington State and their respective acronyms.
+
+```{r, results='asis', echo=FALSE,message=FALSE}
+here::here("wa-state-agencies/data/wa-state-agencies.csv") %>% 
+  read_csv %>% 
+  kable() %>% 
+  kable_styling(bootstrap_options = c("condensed", "responsive"))
+```
+
