--- a/wa-state-agencies/README.Rmd
+++ b/wa-state-agencies/README.Rmd
@@ -4,8 +4,7 @@ always_allow_html: yes
 ---
 
 ```{r setup, include=FALSE}
-
-library(kableExtra)
+ 
 library(knitr)
 library(tidyverse)
 
@@ -18,8 +17,7 @@ A list of the agencies in Washington State and their respective acronyms.
 
 ```{r, results='asis', echo=FALSE,message=FALSE}
 here::here("wa-state-agencies/data/wa-state-agencies.csv") %>% 
-  read_csv %>% 
-  kable() %>% 
-  kable_styling(bootstrap_options = c("condensed", "responsive"))
+  read_csv(na = "NA") %>% 
+  kable()
 ```
 
