--- a/wa-state-agencies/README.Rmd
+++ b/wa-state-agencies/README.Rmd
@@ -15,6 +15,8 @@ options(knitr.kable.NA = '')
 
 A list of the agencies in Washington State and their respective acronyms.
 
+Access the data [here](https://raw.githubusercontent.com/tiernanmartin/datasets/master/wa-state-agencies/data/wa-state-agencies.csv).
+
 Data source: https://access.wa.gov/agency.html
 
 ```{r, results='asis', echo=FALSE,message=FALSE}
