--- a/README.Rmd
+++ b/README.Rmd
@@ -12,3 +12,4 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Contents
 
   + [`wa-state-agencies`](https://github.com/tiernanmartin/datasets/tree/master/wa-state-agencies) the names of every Washington State agency and their respective acronyms
+  + [`wa-libraries`](https://github.com/tiernanmartin/datasets/tree/master/wa-libraries) the public libraries in Washington State and their locations
