--- a/wa-libraries/README.Rmd
+++ b/wa-libraries/README.Rmd
@@ -27,7 +27,7 @@ here::here("wa-libraries/data/wa-libraries-data-dictionary.csv") %>%
 
 ## Download
 
-To download the data, right-click the following link and choose 'Save link as...': [`wa-libraries.gpkg`](https://raw.githubusercontent.com/tiernanmartin/datasets/master/wa-state-agencies/data/wa-libraries.gpkg).
+To download the data, right-click the following link and choose 'Save link as...': [`wa-libraries.gpkg`](https://github.com/tiernanmartin/datasets/raw/master/wa-libraries/data/wa-libraries.gpkg).
 
 ## License <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
 
