--- a/README.Rmd
+++ b/README.Rmd
@@ -13,3 +13,4 @@ knitr::opts_chunk$set(echo = TRUE)
 
   + [`wa-state-agencies`](https://github.com/tiernanmartin/datasets/tree/master/wa-state-agencies) the names of every Washington State agency and their respective acronyms
   + [`wa-libraries`](https://github.com/tiernanmartin/datasets/tree/master/wa-libraries) the public libraries in Washington State and their locations
+  + [`kc-bureaucracy`](https://github.com/tiernanmartin/datasets/tree/master/king-county-bureaucracy) the names of every public department, division, and program in King County, Washington
