--- a/README.Rmd
+++ b/README.Rmd
@@ -2,7 +2,7 @@
 output: github_document
 ---
 
-<a href="http://www.repostatus.org/#wip"><img src="http://www.repostatus.org/badges/latest/wip.svg" alt="Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public." /></a>
+[![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
 
 
 ```{r setup, include=FALSE} 
@@ -15,3 +15,4 @@ knitr::opts_chunk$set(echo = TRUE)
   + [`wa-libraries`](https://github.com/tiernanmartin/datasets/tree/master/wa-libraries) the public libraries in Washington State and their locations
   + [`kc-bureaucracy`](https://github.com/tiernanmartin/datasets/tree/master/king-county-bureaucracy) the names of every public department, division, and program in King County, Washington
   + [`seattle-bureaucracy`](https://github.com/tiernanmartin/datasets/tree/master/seattle-bureaucracy) the names of every public department, division, and program in Seattle, Washington
+  + [`us-bureaucracy`](https://github.com/tiernanmartin/datasets/tree/master/us-bureaucracy) the names of the Executive Departments of the US Government
