--- a/wa-bureaucracy/README.Rmd
+++ b/wa-bureaucracy/README.Rmd
@@ -14,20 +14,20 @@ options(knitr.kable.NA = '')
 
 <a href="http://www.repostatus.org/#active"><img src="http://www.repostatus.org/badges/latest/active.svg" alt="Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public." /></a>
 
-## Washington State Agencies
+## Washington State Bureaucracy
 
-A list of the agencies in Washington State and their respective acronyms.
+A list of the agencies, deparments, and other governmental entities in Washington State and their respective acronyms/abbreviations.
 
 
 ```{r, results='asis', echo=FALSE,message=FALSE}
-here::here("wa-state-agencies/data/wa-state-agencies-data-dictionary.csv") %>% 
+here::here("wa-bureaucracy/data/wa-bureaucracy-data-dictionary.csv") %>% 
   read_csv(na = "NA") %>% 
   kable()
 ```
 
 ## Download
 
-To download the data, right-click the following link and choose 'Save link as...': [`wa-state-agencies.csv`](https://raw.githubusercontent.com/tiernanmartin/datasets/master/wa-state-agencies/data/wa-state-agencies.csv).
+To download the data, right-click the following link and choose 'Save link as...': [`wa-bureaucracy.csv`](https://raw.githubusercontent.com/tiernanmartin/datasets/master/wa-bureaucracy/data/wa-bureaucracy.csv).
 
 ## License <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
 
