--- a/README.Rmd
+++ b/README.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Contents
 
-  + [`wa-state-agencies`](https://github.com/tiernanmartin/datasets/tree/master/wa-state-agencies) the names of every Washington State agency and their respective acronyms
+  + [`wa-bureaucracy`](https://github.com/tiernanmartin/datasets/tree/master/wa-bureaucracy) the names of every Washington State agency and their respective acronyms
   + [`wa-libraries`](https://github.com/tiernanmartin/datasets/tree/master/wa-libraries) the public libraries in Washington State and their locations
   + [`kc-bureaucracy`](https://github.com/tiernanmartin/datasets/tree/master/king-county-bureaucracy) the names of every public department, division, and program in King County, Washington
   + [`seattle-bureaucracy`](https://github.com/tiernanmartin/datasets/tree/master/seattle-bureaucracy) the names of every public department, division, and program in Seattle, Washington
