--- a/README.Rmd
+++ b/README.Rmd
@@ -9,10 +9,6 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-This repository contains several datasets related to Washington State. 
-
-The data are all structured as ["tidy" data](http://vita.had.co.nz/papers/tidy-data.html) collections to minimize pre-analysis cleaning and transformation.
-
 ## Contents
 
   + [`wa-bureaucracy`](https://github.com/tiernanmartin/datasets/tree/master/wa-bureaucracy) the names of every Washington State agency and their respective acronyms
@@ -22,3 +18,11 @@ The data are all structured as ["tidy" data](http://vita.had.co.nz/papers/tidy-d
   + [`us-bureaucracy`](https://github.com/tiernanmartin/datasets/tree/master/us-bureaucracy) the names of the Executive Departments of the US Government
   + [`wa-tribes`](https://github.com/tiernanmartin/datasets/tree/master/wa-tribes) the names of the federally-recognized Indian tribes in Washington State
   + [`wa-housing-authorities`](https://github.com/tiernanmartin/datasets/tree/master/wa-housing-authorities) the names of the housing authorities in Washington State
+  
+## Description
+
+This repository contains several datasets related to Washington State. 
+
+The data are all structured as ["tidy" data](http://vita.had.co.nz/papers/tidy-data.html) collections to minimize pre-analysis cleaning and transformation.
+
+The contents of this repository are being actively developed and are subject to change without advance notice. 
