add county map image

--- a/wa-special-purpose-districts/README.Rmd
+++ b/wa-special-purpose-districts/README.Rmd
@@ -32,8 +32,8 @@ here::here("wa-special-purpose-districts/data/wa-special-purpose-districts-dicti
   kable()
 ```
 
-### Number of Special Purpose District, by County
-![](https://github.com/tiernanmartin/datasets/raw/master/wa-special-purpose-districts/resources/wa-spd2.png)
+### Number of Special Purpose Districts, by County
+![](https://github.com/tiernanmartin/datasets/raw/master/wa-special-purpose-districts/resources/spd-county-map.svg)
 Image Source: [Municipal Research and Services Center (MRSC)](http://mrsc.org/Home.aspx) 
 
 ## Download
