--- a/README.Rmd
+++ b/README.Rmd
@@ -19,6 +19,7 @@ knitr::opts_chunk$set(echo = TRUE)
   + [`wa-tribes`](https://github.com/tiernanmartin/datasets/tree/master/wa-tribes) the names of the federally-recognized Indian tribes in Washington State
   + [`wa-housing-authorities`](https://github.com/tiernanmartin/datasets/tree/master/wa-housing-authorities) the names of the housing authorities in Washington State
   + [`wa-special-purpose-districts`](https://github.com/tiernanmartin/datasets/tree/master/wa-special-purpose-districts) the names of the special purpose districts in Washington State
+  + [`wa-higher-ed-providers`](https://github.com/tiernanmartin/datasets/tree/master/wa-higher-ed-providers) the names of the higher-education providers in Washington State
   
 ## Description
 
