add independent agencies to us-bureaucracy

--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(echo = TRUE)
   + [`wa-libraries`](https://github.com/tiernanmartin/datasets/tree/master/wa-libraries) the public libraries in Washington State and their locations
   + [`kc-bureaucracy`](https://github.com/tiernanmartin/datasets/tree/master/king-county-bureaucracy) the names of every public department, division, and program in King County, Washington
   + [`seattle-bureaucracy`](https://github.com/tiernanmartin/datasets/tree/master/seattle-bureaucracy) the names of every public department, division, and program in Seattle, Washington
-  + [`us-bureaucracy`](https://github.com/tiernanmartin/datasets/tree/master/us-bureaucracy) the names of the Executive Departments of the US Government
+  + [`us-bureaucracy`](https://github.com/tiernanmartin/datasets/tree/master/us-bureaucracy) the names of the Executive Departments and Independent Agencies of the U.S. Federal Government
   + [`wa-tribes`](https://github.com/tiernanmartin/datasets/tree/master/wa-tribes) the names of the federally-recognized Indian tribes in Washington State
   + [`wa-housing-authorities`](https://github.com/tiernanmartin/datasets/tree/master/wa-housing-authorities) the names of the housing authorities in Washington State
   + [`wa-special-purpose-districts`](https://github.com/tiernanmartin/datasets/tree/master/wa-special-purpose-districts) the names of the special purpose districts in Washington State
