--- a/us-bureaucracy/README.Rmd
+++ b/us-bureaucracy/README.Rmd
@@ -14,10 +14,9 @@ options(knitr.kable.NA = '')
 
 [![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](http://www.repostatus.org/badges/latest/wip.svg)](http://www.repostatus.org/#wip)
 
-## Bureaucracy, Executive Departments, US Government
+## Bureaucracy, Executive Departments and Independent Agencies, US Government
 
-A list of the Executive Departments of the United States Government.
-
+A list of the Executive Departments and Independent Agencies of the United States Government.
 
 
 ### Data Dictionary
@@ -37,4 +36,4 @@ To download the data, right-click the following link and choose 'Save link as...
 
 ## License <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
 
-Data license:   [Creative Commons Attribution 4.0 International License](http://creativecommons.org/licenses/by/4.0/) · Data source: [US.gov - Executive Departments](https://www.usa.gov/executive-departments) 
+Data license:   [Creative Commons Attribution 4.0 International License](http://creativecommons.org/licenses/by/4.0/) · Data source: [US.gov](https://www.usa.gov/) 
